# fECG-open

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-tests.yml
data/inputs/test_library/: test.ch1  test.ch2  test.ch3  test.ch4
matlab/: README.md  pipeline.m
matlab/fecg_open/core/: CFPH.m  CurveExt_M.m  ECG_detrend.m  ECG_shrinkage0.m  ECG_shrinkage_median.m  Extract_fhr.m  Extract_mhr.m  RRconstraint.m  STFT_IFD_fast.m  beat_simple.m  cepstrum_convert.m  detect_bsqi.m  dwindow.m  fbeats_extract_real.m  fusion_mbeats.m  mbeats_extract_real.m  mbeats_modify.m  optimal_shrinkage.m  synchrosqueeze1win.m  tftb_window.m
matlab/fecg_open/utils/: MyReadDataq_32.m  align_beats_to_ecg.m  findQRSpeaks.m  pan_tompkin_revised.m  parsave_output_file.m
python/: README.md  pipeline.py  pipeline_fast.py
python/fecg_open/core/: CFPH.py  CurveExt_M.py  ECG_detrend.py  ECG_shrinkage0.py  ECG_shrinkage_median.py  RRconstraint.py  STFT_IFD_fast.py  beat_simple.py  cepstrum_convert.py  detect_bsqi.py  dwindow.py  extract_fhr.py  extract_mhr.py  fbeats_extract_real.py  fusion_mbeats.py  mbeats_extract_real.py  mbeats_modify.py  optimal_shrinkage.py  synchrosqueeze1win.py  tftb_window.py
python/fecg_open/utils/: MyReadDataq_32.py  align_beats_to_ecg.py  findQRSpeaks.py  matlab_smooth_wrapper.py  pan_tompkin_revised.py  parsave_output_file.py
python/tests/: README.md  conftest.py  test_ECG_detrend.py  test_RRconstraint.py  test_integration.py  test_mbeats_modify.py  test_optimal_shrinkage.py
scripts/: MonicaDK_raw2ch.py
(+12 files in other folders)
