[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fecg-open"
version = "1.0.0"
description = "Open-source pipeline for fetal and maternal ECG extraction from multi-channel abdominal recordings"
readme = "python/README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

authors = [
    {name = "Ludovica Cicci", email = "lcicci@imperial.ac.uk"},
    {name = "Steven Niederer"},
    {name = "Sian Chivers"},
    {name = "John Simpson"},
    {name = "Catherine Williamson"},
    {name = "William P. Fifer"},
    {name = "Nicolò Pini"},
]

keywords = ["fetal ECG", "abdominal ECG", "signal processing", "cardiac", "synchrosqueezing"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "numba>=0.56",
    "h5py>=3.3",
    "hdf5storage>=0.1.18",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]
test = ["pytest>=7.0"]

[project.scripts]
fecg-pipeline = "pipeline:main"
fecg-pipeline-fast = "pipeline_fast:main"

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths  = ["python/tests"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"
